# agent-audio-relay

./: .gitignore  README.md  pyproject.toml  tts.tmux
.claude/: CONTEXT_MEMORY.md
examples/: profiles.json  tmux.conf.snippet
extensions/: pi-tts-extension.ts  pi-tts-stream-extension.ts
hooks/: claude-code-tts-hook.sh  codex-tts-hook.sh  ha-tts-bridge.sh  opencode-tts-hook.sh
hooks/lib/: denote-stem.sh
src/agent_audio_relay/: __init__.py  aar_snap.py  clip_server.py  markdown.py  setup_cli.py  shell_launcher.py  sink_stream.py  snapcast_duck.py  spoken_text.py  termux_setup.py  tts_render.py  tts_stream.py  watcher.py
src/agent_audio_relay/backends/: __init__.py  base.py  mpv.py  registry.py  ssh_mpv.py  ssh_termux.py
src/agent_audio_relay/shell/hooks/: claude-code-tts-hook.sh  codex-tts-hook.sh  ha-tts-bridge.sh  opencode-tts-hook.sh
src/agent_audio_relay/shell/hooks/lib/: denote-stem.sh
systemd/: aar-clip-server.service  aar-mpv-tunnel.service  aar-sink-stream-music.service  aar-sink-stream.service  agent-audio-relay-forwarder.service  agent-audio-relay.service  opencode-tts-watcher.service
