[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-audio-relay"
version = "0.1.0"
description = "Bidirectional voice interface for coding agents — TTS from agent responses to pluggable playback targets, with hooks for Claude Code, Codex, OpenCode, and Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "David Ryer" }]
keywords = ["tts", "edge-tts", "claude-code", "codex", "opencode", "home-assistant", "tmux", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/davidj4tech/agent-audio-relay"
Issues = "https://github.com/davidj4tech/agent-audio-relay/issues"

[project.scripts]
agent-audio-relay = "agent_audio_relay.watcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_audio_relay"]
