[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-audio-relay"
version = "0.3.0"
description = "Bidirectional voice interface for coding agents — TTS from agent responses to pluggable playback targets, with hooks for Claude Code, Codex, OpenCode, and Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "David Ryer" }]
keywords = ["tts", "edge-tts", "claude-code", "codex", "opencode", "home-assistant", "tmux", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/davidj4tech/agent-audio-relay"
Issues = "https://github.com/davidj4tech/agent-audio-relay/issues"

[project.scripts]
agent-audio-relay              = "agent_audio_relay.watcher:main"
agent-audio-relay-forwarder    = "agent_audio_relay.shell_launcher:forwarder"
agent-audio-relay-hooks-dir    = "agent_audio_relay.shell_launcher:hooks_dir"
tts-emit                       = "agent_audio_relay.shell_launcher:tts_emit"
tts-ctl                        = "agent_audio_relay.shell_launcher:tts_ctl"
tts-popup                      = "agent_audio_relay.shell_launcher:tts_popup"
claude-code-tts-hook           = "agent_audio_relay.shell_launcher:claude_code_hook"
opencode-tts-hook              = "agent_audio_relay.shell_launcher:opencode_hook"
codex-tts-hook                 = "agent_audio_relay.shell_launcher:codex_hook"
ha-tts-bridge                  = "agent_audio_relay.shell_launcher:ha_bridge"

[tool.hatch.build.targets.wheel]
# `packages` ships the entire `src/agent_audio_relay` tree, including the
# bash scripts under shell/. The shell_launcher.py entries in
# [project.scripts] resolve those scripts at runtime via __file__.
packages = ["src/agent_audio_relay"]
