[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-audio-relay"
version = "0.3.3"
description = "Bidirectional voice interface for coding agents — TTS from agent responses to pluggable playback targets, with hooks for Claude Code, Codex, OpenCode, and Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "David Ryer" }]
keywords = ["tts", "edge-tts", "claude-code", "codex", "opencode", "home-assistant", "tmux", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/davidj4tech/agent-audio-relay"
Issues = "https://github.com/davidj4tech/agent-audio-relay/issues"

[project.scripts]
agent-audio-relay              = "agent_audio_relay.watcher:main"
agent-audio-relay-forwarder    = "agent_audio_relay.shell_launcher:forwarder"
agent-audio-relay-hooks-dir    = "agent_audio_relay.shell_launcher:hooks_dir"
tts-drop                       = "agent_audio_relay.shell_launcher:tts_drop"
tts-stream                     = "agent_audio_relay.tts_stream:main"
aar-tts-render                 = "agent_audio_relay.tts_render:main"
aar-spoken-text                = "agent_audio_relay.spoken_text:main"
tts-ctl                        = "agent_audio_relay.shell_launcher:tts_ctl"
tts-popup                      = "agent_audio_relay.shell_launcher:tts_popup"
tts-pick                       = "agent_audio_relay.shell_launcher:tts_pick"
tts-tmux-install               = "agent_audio_relay.shell_launcher:tts_tmux_install"
tts-status-line                = "agent_audio_relay.shell_launcher:tts_status_line"
aar-mpv-tunnel                 = "agent_audio_relay.shell_launcher:mpv_tunnel"
aar-sink-stream                = "agent_audio_relay.shell_launcher:sink_stream"
aar-clip-server                = "agent_audio_relay.shell_launcher:clip_server"
aar-sink-connect               = "agent_audio_relay.shell_launcher:sink_connect"
aar-sink-run                   = "agent_audio_relay.shell_launcher:sink_run"
aar-where                      = "agent_audio_relay.shell_launcher:aar_where"
aar-setup                      = "agent_audio_relay.setup_cli:main"
claude-code-tts-hook           = "agent_audio_relay.shell_launcher:claude_code_hook"
opencode-tts-hook              = "agent_audio_relay.shell_launcher:opencode_hook"
codex-tts-hook                 = "agent_audio_relay.shell_launcher:codex_hook"
ha-tts-bridge                  = "agent_audio_relay.shell_launcher:ha_bridge"

[tool.hatch.build.targets.wheel]
# `packages` ships the entire `src/agent_audio_relay` tree, including the
# bash scripts under shell/. The shell_launcher.py entries in
# [project.scripts] resolve those scripts at runtime via __file__.
packages = ["src/agent_audio_relay"]

# tts.tmux at the repo root is the TPM plugin entry point. force-include
# also drops it inside the wheel so `tts-tmux-install` (the non-TPM path
# for users with `run`-based config loaders like gpakosz/oh-my-tmux) can
# locate and exec it without needing the git checkout.
[tool.hatch.build.targets.wheel.force-include]
"tts.tmux" = "agent_audio_relay/tts.tmux"
# Ship the systemd unit files inside the wheel so `aar-setup` can find
# them via `Path(__file__).parent / "systemd/"` after `pip install`.
"systemd/aar-mpv-tunnel.service"               = "agent_audio_relay/systemd/aar-mpv-tunnel.service"
"systemd/aar-sink-stream.service"              = "agent_audio_relay/systemd/aar-sink-stream.service"
"systemd/aar-sink-stream-music.service"        = "agent_audio_relay/systemd/aar-sink-stream-music.service"
"systemd/aar-clip-server.service"              = "agent_audio_relay/systemd/aar-clip-server.service"
"systemd/agent-audio-relay-forwarder.service"  = "agent_audio_relay/systemd/agent-audio-relay-forwarder.service"
"systemd/agent-audio-relay.service"            = "agent_audio_relay/systemd/agent-audio-relay.service"
"systemd/opencode-tts-watcher.service"         = "agent_audio_relay/systemd/opencode-tts-watcher.service"
